# hashsigs-cpp

./: CMakeLists.txt  README.md
include/: constants.hpp  keccak.h  public_key.hpp  wotsplus.hpp
src/: hashsigs_cli.cpp  keccak.cpp  public_key.cpp  wotsplus.cpp
tests/: CMakeLists.txt  wotsplus_test.cpp
